--- a/frontend/src/locales/de.po
+++ b/frontend/src/locales/de.po
@@ -277,7 +277,7 @@ msgstr "Konto bereits verbunden!"
 msgid "Account Name"
 msgstr "Kontoname"
 
-#: src/components/common/GlobalMenu/index.tsx:37
+#: src/components/common/GlobalMenu/index.tsx:45
 #: src/components/routes/account/ManageAccount/index.tsx:19
 msgid "Account Settings"
 msgstr "Account Einstellungen"
@@ -285,6 +285,12 @@ msgstr "Account Einstellungen"
 #: src/components/routes/account/ManageAccount/sections/AccountSettings/index.tsx:42
 msgid "Account updated successfully"
 msgstr "Konto erfolgreich aktualisiert"
+
+#: src/components/common/AdminUsersTable/index.tsx:127
+#: src/components/layouts/Admin/index.tsx:14
+#: src/components/routes/admin/Accounts/index.tsx:31
+msgid "Accounts"
+msgstr "Konten"
 
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:64
 msgid "Action Required: Reconnect Your Stripe Account"
@@ -434,10 +440,17 @@ msgstr "Adresszeile 2"
 msgid "Address Line 2"
 msgstr "Adresszeile 2"
 
+#: src/components/layouts/Admin/index.tsx:12
 #: src/components/modals/EditUserModal/index.tsx:49
 #: src/components/modals/InviteUserModal/index.tsx:41
 msgid "Admin"
 msgstr "Administrator"
+
+#: src/components/common/GlobalMenu/index.tsx:61
+#: src/components/layouts/Admin/index.tsx:21
+#: src/components/routes/admin/Dashboard/index.tsx:16
+msgid "Admin Dashboard"
+msgstr "Admin Dashboard"
 
 #: src/components/modals/EditUserModal/index.tsx:51
 #: src/components/modals/InviteUserModal/index.tsx:43
@@ -1656,7 +1669,7 @@ msgstr "Ereignis erstellen"
 msgid "Create new"
 msgstr "Neu erstellen"
 
-#: src/components/common/GlobalMenu/index.tsx:60
+#: src/components/common/GlobalMenu/index.tsx:76
 #: src/components/modals/CreateEventModal/index.tsx:138
 #: src/components/modals/CreateOrganizerModal/index.tsx:16
 msgid "Create Organizer"
@@ -1866,6 +1879,7 @@ msgstr "Gefahrenzone"
 msgid "Danger Zone"
 msgstr "Gefahrenzone"
 
+#: src/components/layouts/Admin/index.tsx:13
 #: src/components/layouts/Event/index.tsx:89
 #: src/components/routes/organizer/OrganizerDashboard/index.tsx:160
 msgid "Dashboard"
@@ -2554,6 +2568,7 @@ msgstr "Ereignistypen"
 msgid "Event Venue"
 msgstr "Veranstaltungsort"
 
+#: src/components/common/AdminAccountsTable/index.tsx:42
 #: src/components/layouts/OrganizerLayout/index.tsx:73
 #: src/components/layouts/OrganizerLayout/index.tsx:133
 #: src/components/routes/organizer/Events/index.tsx:43
@@ -2695,6 +2710,14 @@ msgstr "Produkte konnten nicht sortiert werden"
 #: src/mutations/useExportAnswers.ts:15
 msgid "Failed to start export job"
 msgstr "Exportauftrag konnte nicht gestartet werden"
+
+#: src/components/routes/admin/Users/index.tsx:48
+msgid "Failed to start impersonation. Please try again."
+msgstr "Fehler beim Starten der Identitätswechsel. Bitte versuchen Sie es erneut."
+
+#: src/components/common/ImpersonationBanner/index.tsx:29
+msgid "Failed to stop impersonation. Please try again."
+msgstr "Fehler beim Beenden der Identitätswechsel. Bitte versuchen Sie es erneut."
 
 #: src/components/modals/EditAffiliateModal/index.tsx:70
 msgid "Failed to update affiliate"
@@ -2939,6 +2962,10 @@ msgstr "Gäste"
 msgid "Have a promo code?"
 msgstr "Haben Sie einen Promo-Code?"
 
+#: src/components/routes/admin/Dashboard/index.tsx:20
+msgid "Hello {0}, manage your platform from here."
+msgstr "Hallo {0}, verwalten Sie Ihre Plattform von hier aus."
+
 #: src/components/forms/OrganizerForm/index.tsx:35
 #: src/components/routes/organizer/Settings/Sections/BasicSettings/index.tsx:81
 msgid "hello@awesome-events.com"
@@ -3149,6 +3176,19 @@ msgstr "Bild-URL"
 #: src/components/routes/organizer/OrganizerHomepageDesigner/index.tsx:197
 msgid "Images"
 msgstr "Bilder"
+
+#: src/components/common/AdminUsersTable/index.tsx:84
+#: src/components/common/AdminUsersTable/index.tsx:96
+msgid "Impersonate"
+msgstr "Identität annehmen"
+
+#: src/components/routes/admin/Users/index.tsx:38
+msgid "Impersonation started"
+msgstr "Identitätswechsel gestartet"
+
+#: src/components/common/ImpersonationBanner/index.tsx:23
+msgid "Impersonation stopped"
+msgstr "Identitätswechsel beendet"
 
 #: src/components/routes/event/EventDashboard/index.tsx:124
 msgid "Important: Stripe reconnection required"
@@ -3397,6 +3437,10 @@ msgstr "Live"
 msgid "LIVE"
 msgstr "LIVE"
 
+#: src/components/routes/admin/Dashboard/index.tsx:67
+msgid "Live Events"
+msgstr "Live-Veranstaltungen"
+
 #: src/components/routes/event/TicketDesigner/TicketPreview.tsx:34
 msgid "Loading preview..."
 msgstr "Vorschau wird geladen..."
@@ -3456,7 +3500,7 @@ msgstr "Logo wird in der Kopfzeile angezeigt"
 msgid "Logo will be displayed on the ticket"
 msgstr "Logo wird auf dem Ticket angezeigt"
 
-#: src/components/common/GlobalMenu/index.tsx:69
+#: src/components/common/GlobalMenu/index.tsx:85
 msgid "Logout"
 msgstr "Ausloggen"
 
@@ -3651,7 +3695,7 @@ msgstr "Meine tolle Eventbeschreibung..."
 msgid "My amazing event title..."
 msgstr "Mein toller Veranstaltungstitel …"
 
-#: src/components/common/GlobalMenu/index.tsx:32
+#: src/components/common/GlobalMenu/index.tsx:40
 msgid "My Profile"
 msgstr "Mein Profil"
 
@@ -3709,6 +3753,14 @@ msgstr "Neues Kennwort"
 #: src/constants/eventCategories.ts:4
 msgid "Nightlife"
 msgstr "Nachtleben"
+
+#: src/components/common/AdminUsersTable/index.tsx:143
+msgid "No accounts"
+msgstr "Keine Konten"
+
+#: src/components/common/AdminAccountsTable/index.tsx:15
+msgid "No accounts found"
+msgstr "Keine Konten gefunden"
 
 #: src/components/routes/event/Webhooks/index.tsx:22
 msgid "No Active Webhooks"
@@ -3866,6 +3918,10 @@ msgstr "Es wurden keine Steuern oder Gebühren hinzugefügt."
 msgid "No upcoming events"
 msgstr "Keine bevorstehenden Veranstaltungen"
 
+#: src/components/common/AdminUsersTable/index.tsx:18
+msgid "No users found"
+msgstr "Keine Benutzer gefunden"
+
 #: src/components/modals/WebhookLogsModal/index.tsx:180
 msgid "No webhook events have been recorded for this endpoint yet. Events will appear here once they are triggered."
 msgstr "Für diesen Endpunkt wurden noch keine Webhook-Ereignisse aufgezeichnet. Ereignisse werden hier angezeigt, sobald sie ausgelöst werden."
@@ -4012,7 +4068,7 @@ msgstr "Nur an Bestellungen mit diesen Status senden"
 msgid "Open Check-In Page"
 msgstr "Check-In-Seite öffnen"
 
-#: src/components/layouts/AppLayout/index.tsx:28
+#: src/components/layouts/AppLayout/index.tsx:29
 msgid "Open sidebar"
 msgstr "Seitenleiste öffnen"
 
@@ -5174,6 +5230,10 @@ msgstr "Zu den Tickets scrollen"
 msgid "Search affiliates..."
 msgstr "Partner suchen..."
 
+#: src/components/routes/admin/Accounts/index.tsx:34
+msgid "Search by account name or email..."
+msgstr "Nach Kontoname oder E-Mail suchen..."
+
 #: src/components/routes/event/attendees.tsx:64
 msgid "Search by attendee name, email or order #..."
 msgstr "Suche nach Teilnehmername, E-Mail oder Bestellnummer ..."
@@ -5182,6 +5242,10 @@ msgstr "Suche nach Teilnehmername, E-Mail oder Bestellnummer ..."
 #: src/components/routes/organizer/Events/index.tsx:47
 msgid "Search by event name..."
 msgstr "Suche nach Veranstaltungsnamen..."
+
+#: src/components/routes/admin/Users/index.tsx:60
+msgid "Search by name, email, or account..."
+msgstr "Nach Name, E-Mail oder Konto suchen..."
 
 #: src/components/routes/event/orders.tsx:126
 msgid "Search by name, email, or order #..."
@@ -5235,6 +5299,10 @@ msgstr "{0} auswählen"
 #: src/components/routes/event/Settings/Sections/EventDetailsForm/index.tsx:83
 msgid "Select a category"
 msgstr "Kategorie auswählen"
+
+#: src/components/common/AdminUsersTable/index.tsx:100
+msgid "Select Account"
+msgstr "Konto auswählen"
 
 #: src/components/modals/DuplicateEventModal/index.tsx:138
 msgid "Select All"
@@ -5680,6 +5748,10 @@ msgstr "Status"
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:176
 msgid "Still handling refunds for your older transactions."
 msgstr "Bearbeitet weiterhin Erstattungen für Ihre älteren Transaktionen."
+
+#: src/components/common/ImpersonationBanner/index.tsx:53
+msgid "Stop Impersonating"
+msgstr "Identitätswechsel beenden"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:85
 msgid "Stripe"
@@ -6364,6 +6436,10 @@ msgstr "Tickets & Produkte"
 msgid "Tickets for"
 msgstr "Tickets für"
 
+#: src/components/routes/admin/Dashboard/index.tsx:85
+msgid "Tickets Sold"
+msgstr "Verkaufte Tickets"
+
 #: src/components/forms/ProductForm/index.tsx:67
 msgid "Tier {0}"
 msgstr "Stufe {0}"
@@ -6423,6 +6499,10 @@ msgstr "Werkzeuge"
 msgid "Total"
 msgstr "Gesamt"
 
+#: src/components/routes/admin/Dashboard/index.tsx:49
+msgid "Total Accounts"
+msgstr "Gesamtkonten"
+
 #: src/components/common/Editor/Controls/InsertLiquidVariableControl.tsx:22
 msgid "Total amount paid"
 msgstr "Gezahlter Gesamtbetrag"
@@ -6464,6 +6544,10 @@ msgstr "Insgesamt erstattet"
 #: src/components/routes/organizer/OrganizerDashboard/index.tsx:143
 msgid "Total Tax"
 msgstr "Gesamtsteuer"
+
+#: src/components/routes/admin/Dashboard/index.tsx:31
+msgid "Total Users"
+msgstr "Gesamtbenutzer"
 
 #: src/components/layouts/AuthLayout/index.tsx:56
 msgid "Track revenue, page views, and sales with detailed analytics and exportable reports"
@@ -6696,12 +6780,15 @@ msgstr "Verwendet für Rahmen, Hervorhebungen und QR-Code-Styling"
 msgid "User"
 msgstr "Benutzer"
 
-#: src/components/common/GlobalMenu/index.tsx:45
+#: src/components/common/GlobalMenu/index.tsx:53
 #: src/components/routes/account/ManageAccount/sections/Users/index.tsx:142
 msgid "User Management"
 msgstr "Benutzerverwaltung"
 
+#: src/components/common/AdminAccountsTable/index.tsx:49
+#: src/components/layouts/Admin/index.tsx:15
 #: src/components/routes/account/ManageAccount/index.tsx:32
+#: src/components/routes/admin/Users/index.tsx:57
 msgid "Users"
 msgstr "Benutzer"
 
@@ -7129,6 +7216,10 @@ msgstr "Sie haben dieses Ticket bereits gescannt"
 #: src/components/routes/profile/ConfirmEmailChange/index.tsx:53
 msgid "You are changing your email to <0>{0}</0>."
 msgstr "Sie ändern Ihre E-Mail zu <0>{0}</0>."
+
+#: src/components/common/ImpersonationBanner/index.tsx:40
+msgid "You are impersonating <0>{0}</0> ({1})"
+msgstr "Sie geben sich als <0>{0}</0> ({1}) aus"
 
 #: src/components/modals/RefundOrderModal/index.tsx:138
 msgid "You are issuing a partial refund. The customer will be refunded {0} {1}."
