--- a/frontend/src/locales/es.po
+++ b/frontend/src/locales/es.po
@@ -277,7 +277,7 @@ msgstr "¡Cuenta ya conectada!"
 msgid "Account Name"
 msgstr "Nombre de la cuenta"
 
-#: src/components/common/GlobalMenu/index.tsx:37
+#: src/components/common/GlobalMenu/index.tsx:45
 #: src/components/routes/account/ManageAccount/index.tsx:19
 msgid "Account Settings"
 msgstr "Configuraciones de la cuenta"
@@ -285,6 +285,12 @@ msgstr "Configuraciones de la cuenta"
 #: src/components/routes/account/ManageAccount/sections/AccountSettings/index.tsx:42
 msgid "Account updated successfully"
 msgstr "Cuenta actualizada exitosamente"
+
+#: src/components/common/AdminUsersTable/index.tsx:127
+#: src/components/layouts/Admin/index.tsx:14
+#: src/components/routes/admin/Accounts/index.tsx:31
+msgid "Accounts"
+msgstr "Cuentas"
 
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:64
 msgid "Action Required: Reconnect Your Stripe Account"
@@ -434,10 +440,17 @@ msgstr "Línea de dirección 2"
 msgid "Address Line 2"
 msgstr "Línea de dirección 2"
 
+#: src/components/layouts/Admin/index.tsx:12
 #: src/components/modals/EditUserModal/index.tsx:49
 #: src/components/modals/InviteUserModal/index.tsx:41
 msgid "Admin"
 msgstr "Administración"
+
+#: src/components/common/GlobalMenu/index.tsx:61
+#: src/components/layouts/Admin/index.tsx:21
+#: src/components/routes/admin/Dashboard/index.tsx:16
+msgid "Admin Dashboard"
+msgstr "Panel de Administración"
 
 #: src/components/modals/EditUserModal/index.tsx:51
 #: src/components/modals/InviteUserModal/index.tsx:43
@@ -1656,7 +1669,7 @@ msgstr "Crear evento"
 msgid "Create new"
 msgstr "Crear nuevo"
 
-#: src/components/common/GlobalMenu/index.tsx:60
+#: src/components/common/GlobalMenu/index.tsx:76
 #: src/components/modals/CreateEventModal/index.tsx:138
 #: src/components/modals/CreateOrganizerModal/index.tsx:16
 msgid "Create Organizer"
@@ -1866,10 +1879,11 @@ msgstr "Zona peligrosa"
 msgid "Danger Zone"
 msgstr "Zona de Peligro"
 
+#: src/components/layouts/Admin/index.tsx:13
 #: src/components/layouts/Event/index.tsx:89
 #: src/components/routes/organizer/OrganizerDashboard/index.tsx:160
 msgid "Dashboard"
-msgstr "Panel"
+msgstr "Dashboard"
 
 #: src/components/common/OrderDetails/index.tsx:39
 #: src/components/forms/QuestionForm/index.tsx:136
@@ -2554,6 +2568,7 @@ msgstr "Tipos de eventos"
 msgid "Event Venue"
 msgstr "Lugar del Evento"
 
+#: src/components/common/AdminAccountsTable/index.tsx:42
 #: src/components/layouts/OrganizerLayout/index.tsx:73
 #: src/components/layouts/OrganizerLayout/index.tsx:133
 #: src/components/routes/organizer/Events/index.tsx:43
@@ -2695,6 +2710,14 @@ msgstr "Error al ordenar productos"
 #: src/mutations/useExportAnswers.ts:15
 msgid "Failed to start export job"
 msgstr "No se pudo iniciar la exportación"
+
+#: src/components/routes/admin/Users/index.tsx:48
+msgid "Failed to start impersonation. Please try again."
+msgstr "Error al iniciar la suplantación. Por favor, inténtelo de nuevo."
+
+#: src/components/common/ImpersonationBanner/index.tsx:29
+msgid "Failed to stop impersonation. Please try again."
+msgstr "Error al detener la suplantación. Por favor, inténtelo de nuevo."
 
 #: src/components/modals/EditAffiliateModal/index.tsx:70
 msgid "Failed to update affiliate"
@@ -2939,6 +2962,10 @@ msgstr "Huéspedes"
 msgid "Have a promo code?"
 msgstr "¿Tienes un código de promoción?"
 
+#: src/components/routes/admin/Dashboard/index.tsx:20
+msgid "Hello {0}, manage your platform from here."
+msgstr "Hola {0}, gestiona tu plataforma desde aquí."
+
 #: src/components/forms/OrganizerForm/index.tsx:35
 #: src/components/routes/organizer/Settings/Sections/BasicSettings/index.tsx:81
 msgid "hello@awesome-events.com"
@@ -3149,6 +3176,19 @@ msgstr "URL de imagen"
 #: src/components/routes/organizer/OrganizerHomepageDesigner/index.tsx:197
 msgid "Images"
 msgstr "Imágenes"
+
+#: src/components/common/AdminUsersTable/index.tsx:84
+#: src/components/common/AdminUsersTable/index.tsx:96
+msgid "Impersonate"
+msgstr "Suplantar"
+
+#: src/components/routes/admin/Users/index.tsx:38
+msgid "Impersonation started"
+msgstr "Suplantación iniciada"
+
+#: src/components/common/ImpersonationBanner/index.tsx:23
+msgid "Impersonation stopped"
+msgstr "Suplantación detenida"
 
 #: src/components/routes/event/EventDashboard/index.tsx:124
 msgid "Important: Stripe reconnection required"
@@ -3397,6 +3437,10 @@ msgstr "En vivo"
 msgid "LIVE"
 msgstr "EN VIVO"
 
+#: src/components/routes/admin/Dashboard/index.tsx:67
+msgid "Live Events"
+msgstr "Eventos en Vivo"
+
 #: src/components/routes/event/TicketDesigner/TicketPreview.tsx:34
 msgid "Loading preview..."
 msgstr "Cargando vista previa..."
@@ -3456,7 +3500,7 @@ msgstr "El logo se mostrará en el encabezado"
 msgid "Logo will be displayed on the ticket"
 msgstr "El logo se mostrará en el ticket"
 
-#: src/components/common/GlobalMenu/index.tsx:69
+#: src/components/common/GlobalMenu/index.tsx:85
 msgid "Logout"
 msgstr "Cerrar sesión"
 
@@ -3651,7 +3695,7 @@ msgstr "Mi increíble descripción del evento..."
 msgid "My amazing event title..."
 msgstr "El increíble título de mi evento..."
 
-#: src/components/common/GlobalMenu/index.tsx:32
+#: src/components/common/GlobalMenu/index.tsx:40
 msgid "My Profile"
 msgstr "Mi perfil"
 
@@ -3709,6 +3753,14 @@ msgstr "Nueva contraseña"
 #: src/constants/eventCategories.ts:4
 msgid "Nightlife"
 msgstr "Vida nocturna"
+
+#: src/components/common/AdminUsersTable/index.tsx:143
+msgid "No accounts"
+msgstr "Sin cuentas"
+
+#: src/components/common/AdminAccountsTable/index.tsx:15
+msgid "No accounts found"
+msgstr "No se encontraron cuentas"
 
 #: src/components/routes/event/Webhooks/index.tsx:22
 msgid "No Active Webhooks"
@@ -3866,6 +3918,10 @@ msgstr "No se han agregado impuestos ni tarifas."
 msgid "No upcoming events"
 msgstr "No hay próximos eventos"
 
+#: src/components/common/AdminUsersTable/index.tsx:18
+msgid "No users found"
+msgstr "No se encontraron usuarios"
+
 #: src/components/modals/WebhookLogsModal/index.tsx:180
 msgid "No webhook events have been recorded for this endpoint yet. Events will appear here once they are triggered."
 msgstr "Aún no se han registrado eventos de webhook para este punto de acceso. Los eventos aparecerán aquí una vez que se activen."
@@ -4012,7 +4068,7 @@ msgstr "Enviar solo a pedidos con estos estados"
 msgid "Open Check-In Page"
 msgstr "Abrir Página de Check-In"
 
-#: src/components/layouts/AppLayout/index.tsx:28
+#: src/components/layouts/AppLayout/index.tsx:29
 msgid "Open sidebar"
 msgstr "Abrir barra lateral"
 
@@ -5174,6 +5230,10 @@ msgstr "Ir a entradas"
 msgid "Search affiliates..."
 msgstr "Buscar afiliados..."
 
+#: src/components/routes/admin/Accounts/index.tsx:34
+msgid "Search by account name or email..."
+msgstr "Buscar por nombre de cuenta o correo electrónico..."
+
 #: src/components/routes/event/attendees.tsx:64
 msgid "Search by attendee name, email or order #..."
 msgstr "Busque por nombre del asistente, correo electrónico o número de pedido..."
@@ -5182,6 +5242,10 @@ msgstr "Busque por nombre del asistente, correo electrónico o número de pedido
 #: src/components/routes/organizer/Events/index.tsx:47
 msgid "Search by event name..."
 msgstr "Buscar por nombre del evento..."
+
+#: src/components/routes/admin/Users/index.tsx:60
+msgid "Search by name, email, or account..."
+msgstr "Buscar por nombre, correo electrónico o cuenta..."
 
 #: src/components/routes/event/orders.tsx:126
 msgid "Search by name, email, or order #..."
@@ -5235,6 +5299,10 @@ msgstr "Seleccionar {0}"
 #: src/components/routes/event/Settings/Sections/EventDetailsForm/index.tsx:83
 msgid "Select a category"
 msgstr "Selecciona una categoría"
+
+#: src/components/common/AdminUsersTable/index.tsx:100
+msgid "Select Account"
+msgstr "Seleccionar Cuenta"
 
 #: src/components/modals/DuplicateEventModal/index.tsx:138
 msgid "Select All"
@@ -5680,6 +5748,10 @@ msgstr "Estado"
 #: src/components/routes/account/ManageAccount/sections/PaymentSettings/index.tsx:176
 msgid "Still handling refunds for your older transactions."
 msgstr "Aún manejando reembolsos para sus transacciones anteriores."
+
+#: src/components/common/ImpersonationBanner/index.tsx:53
+msgid "Stop Impersonating"
+msgstr "Detener Suplantación"
 
 #: src/components/routes/event/Settings/Sections/PaymentSettings/index.tsx:85
 msgid "Stripe"
@@ -6364,6 +6436,10 @@ msgstr "Entradas y productos"
 msgid "Tickets for"
 msgstr "Entradas para"
 
+#: src/components/routes/admin/Dashboard/index.tsx:85
+msgid "Tickets Sold"
+msgstr "Entradas Vendidas"
+
 #: src/components/forms/ProductForm/index.tsx:67
 msgid "Tier {0}"
 msgstr "Nivel {0}"
@@ -6423,6 +6499,10 @@ msgstr "Herramientas"
 msgid "Total"
 msgstr "Total"
 
+#: src/components/routes/admin/Dashboard/index.tsx:49
+msgid "Total Accounts"
+msgstr "Cuentas Totales"
+
 #: src/components/common/Editor/Controls/InsertLiquidVariableControl.tsx:22
 msgid "Total amount paid"
 msgstr "Cantidad total pagada"
@@ -6464,6 +6544,10 @@ msgstr "Total reembolsado"
 #: src/components/routes/organizer/OrganizerDashboard/index.tsx:143
 msgid "Total Tax"
 msgstr "Total impuestos"
+
+#: src/components/routes/admin/Dashboard/index.tsx:31
+msgid "Total Users"
+msgstr "Usuarios Totales"
 
 #: src/components/layouts/AuthLayout/index.tsx:56
 msgid "Track revenue, page views, and sales with detailed analytics and exportable reports"
@@ -6696,12 +6780,15 @@ msgstr "Usado para bordes, resaltados y estilo del código QR"
 msgid "User"
 msgstr "Usuario"
 
-#: src/components/common/GlobalMenu/index.tsx:45
+#: src/components/common/GlobalMenu/index.tsx:53
 #: src/components/routes/account/ManageAccount/sections/Users/index.tsx:142
 msgid "User Management"
 msgstr "Gestión de usuarios"
 
+#: src/components/common/AdminAccountsTable/index.tsx:49
+#: src/components/layouts/Admin/index.tsx:15
 #: src/components/routes/account/ManageAccount/index.tsx:32
+#: src/components/routes/admin/Users/index.tsx:57
 msgid "Users"
 msgstr "Usuarios"
 
@@ -7129,6 +7216,10 @@ msgstr "Ya has escaneado este boleto"
 #: src/components/routes/profile/ConfirmEmailChange/index.tsx:53
 msgid "You are changing your email to <0>{0}</0>."
 msgstr "Estás cambiando tu correo electrónico a <0>{0}</0>."
+
+#: src/components/common/ImpersonationBanner/index.tsx:40
+msgid "You are impersonating <0>{0}</0> ({1})"
+msgstr "Estás suplantando a <0>{0}</0> ({1})"
 
 #: src/components/modals/RefundOrderModal/index.tsx:138
 msgid "You are issuing a partial refund. The customer will be refunded {0} {1}."
