Update Italian translations in it.po file

--- a/frontend/src/locales/it.po
+++ b/frontend/src/locales/it.po
@@ -8,7 +8,7 @@ msgstr ""
 "Language: it\n"
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-10-24 22:37+0200\n"
+"PO-Revision-Date: 2025-11-21 15:37+0200\n"
 "Last-Translator: Albano Battistella <albanobattistella@gmail.com>\n"
 "Language-Team: Italian\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -3271,11 +3271,11 @@ msgstr "Importante: Riconnessione Stripe richiesta"
 
 #: src/components/routes/admin/Dashboard/index.tsx:29
 msgid "In {diffHours} hours"
-msgstr ""
+msgstr "Tra {diffHours} ore"
 
 #: src/components/routes/admin/Dashboard/index.tsx:27
 msgid "In {diffMinutes} minutes"
-msgstr ""
+msgstr "Tra {diffMinutes} minuti"
 
 #: src/components/layouts/AuthLayout/index.tsx:55
 msgid "In-depth Analytics"
