--- a/frontend/src/locales/it.po
+++ b/frontend/src/locales/it.po
@@ -240,7 +240,7 @@ msgstr "Un'imposta standard, come IVA o GST"
 
 #: src/components/common/OrdersTable/index.tsx:417
 msgid "Abandoned"
-msgstr ""
+msgstr "Abbandonato"
 
 #: src/components/layouts/EventHomepage/index.tsx:175
 msgid "About"
@@ -1054,7 +1054,7 @@ msgstr "Impossibile fare il check-in"
 
 #: src/components/common/CheckIn/AttendeeList.tsx:34
 msgid "Cannot Check In (Cancelled)"
-msgstr ""
+msgstr "Impossibile effettuare il check-in (Annullato)"
 
 #: src/components/forms/CapaciyAssigmentForm/index.tsx:42
 #: src/components/layouts/Event/index.tsx:103
@@ -2693,7 +2693,7 @@ msgstr "Performance Eventi"
 
 #: src/components/routes/admin/Dashboard/index.tsx:129
 msgid "Events Starting in Next 24 Hours"
-msgstr ""
+msgstr "Eventi che iniziano nelle prossime 24 ore"
 
 #: src/components/common/EmailTemplateEditor/CTAConfiguration.tsx:23
 msgid "Every email template must include a call-to-action button that links to the appropriate page"
@@ -3472,11 +3472,11 @@ msgstr "Articolo"
 
 #: src/components/common/OrdersTable/index.tsx:324
 msgid "item(s)"
-msgstr ""
+msgstr "articolo(i)"
 
 #: src/components/common/OrdersTable/index.tsx:316
 msgid "Items"
-msgstr ""
+msgstr "Articoli"
 
 #: src/components/routes/auth/Register/index.tsx:85
 msgid "John"
@@ -4002,7 +4002,7 @@ msgstr "Nessun evento trovato"
 
 #: src/components/routes/admin/Dashboard/index.tsx:168
 msgid "No events starting in the next 24 hours"
-msgstr ""
+msgstr "Nessun evento in programma nelle prossime 24 ore"
 
 #: src/components/common/NoEventsBlankSlate/index.tsx:14
 msgid "No events to show"
@@ -4022,7 +4022,7 @@ msgstr "Nessun impatto sulle tue transazioni attuali o passate"
 
 #: src/components/common/OrdersTable/index.tsx:300
 msgid "No invoice"
-msgstr ""
+msgstr "Nessuna fattura"
 
 #: src/components/modals/WebhookLogsModal/index.tsx:177
 msgid "No logs found"
@@ -4330,7 +4330,7 @@ msgstr "Ordine"
 
 #: src/components/common/AttendeeTable/index.tsx:240
 msgid "Order & Ticket"
-msgstr ""
+msgstr "Ordine & biglietto"
 
 #: src/components/forms/WebhookForm/index.tsx:76
 #: src/components/routes/product-widget/OrderSummaryAndProducts/index.tsx:63
@@ -4867,7 +4867,7 @@ msgstr "Seleziona"
 
 #: src/components/common/OrganizerReportTable/index.tsx:223
 msgid "Please select a date range"
-msgstr ""
+msgstr "Seleziona un intervallo di date"
 
 #: src/components/common/Editor/Controls/InsertImageControl/index.tsx:54
 msgid "Please select an image."
@@ -5345,11 +5345,11 @@ msgstr "Reinvio in corso..."
 
 #: src/components/common/OrdersTable/index.tsx:399
 msgid "Reserved"
-msgstr ""
+msgstr "Riservato"
 
 #: src/components/common/OrdersTable/index.tsx:306
 msgid "Reserved until"
-msgstr ""
+msgstr "Riservato fino a"
 
 #: src/components/common/FilterModal/index.tsx:279
 msgid "Reset"
@@ -6667,7 +6667,7 @@ msgstr "Biglietto"
 
 #: src/components/common/CheckIn/AttendeeList.tsx:83
 msgid "Ticket Cancelled"
-msgstr ""
+msgstr "Biglietto annullato"
 
 #: src/components/layouts/Event/index.tsx:111
 #: src/components/routes/event/TicketDesigner/index.tsx:107
@@ -6796,7 +6796,7 @@ msgstr "Per ricevere pagamenti con carta di credito, devi collegare il tuo accou
 
 #: src/components/common/ColumnVisibilityToggle/index.tsx:26
 msgid "Toggle columns"
-msgstr ""
+msgstr "Attiva colonne"
 
 #: src/components/layouts/Event/index.tsx:109
 #: src/components/layouts/OrganizerLayout/index.tsx:84
