Changed wording Fahrkarte to Ticket
Everywhere else, the term ‘ticket’ is used rather than "Fahrkarte"; for consistency, ‘ticket’ should also be used here.

--- a/frontend/src/locales/de.po
+++ b/frontend/src/locales/de.po
@@ -7035,7 +7035,7 @@ msgstr "Dies ist für Kunden nicht sichtbar, hilft Ihnen aber, den Partner zu id
 #: src/components/common/AttendeeTable/index.tsx:370
 #: src/components/routes/my-tickets/index.tsx:85
 msgid "ticket"
-msgstr "Fahrkarte"
+msgstr "Ticket"
 
 #: src/components/common/Editor/Controls/InsertLiquidVariableControl.tsx:58
 #: src/components/common/Editor/Controls/InsertLiquidVariableControl.tsx:59
@@ -7045,7 +7045,7 @@ msgstr "Fahrkarte"
 #: src/components/forms/ProductForm/index.tsx:138
 #: src/components/modals/CreateAttendeeModal/index.tsx:162
 msgid "Ticket"
-msgstr "Fahrkarte"
+msgstr "Ticket"
 
 #: src/components/common/CheckIn/AttendeeList.tsx:83
 msgid "Ticket Cancelled"
